# ChinglishConverter

./: DISCLAIMER.md  LICENSE  PROGRESS.md  README.md  TODO.md  pyproject.toml  requirements.txt
packaging/: build.ps1  build.sh  entrypoint.py
src/chinglishconverter/: __init__.py  __main__.py  cli.py  client.py  config.py  converter.py  prompts.py  tutorial.py
src/chinglishconverter/data/: tutorial.md
src/chinglishconverter/parsers/: __init__.py  overleaf.py  pdf.py  plaintext.py  tex.py
tests/: test_basic.py
